--- a/index1.html
+++ b/index1.html
@@ -7,11 +7,14 @@
 		
 	</head>
 	<body>
+		<header>
+			<h1 class="titulo-principal">Barbearia Alura</h1>
+		</header>
 		<img id="banner"  src="banner.jpg">
 			
 			<div class="principal">
 			
-				<h1>Sobre a Barbearia Alura</h1>
+				<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
 				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -22,7 +25,7 @@
 			</div>
 			
 			<div class="beneficios">
-				<h2>Benefícios</h2>
+				<h3 class="titulo-centralizado">Benefícios</h3>
 
 				<ul>
 					<li class="itens">Atendimento ao Cliente</li>
@@ -30,6 +33,8 @@
 					<li class="itens">Localização</li>
 					<li class="itens">Profissionais Qualificados	</li>
 				</ul>
+
+				<img src="beneficios.jpg" class="imagemBeneficios">
 			</div>
 		
 		
@@ -37,3 +42,19 @@
 
 	
 </html> 
+
+<!--conportamento Block -> after tag li ela passou a ocupar 100% da pagina. O comportamento
+tag ocupar 100% de uma pagina é comportamento "block" ele bloqueia o conteúdo daquela linha, 
+uma imagem não bloqueia o conteúdo na sua lateral e este tipo de conteúdo chama-se conteúdo inline
+ou inline-Block eles ficam fixo mesmo diminuindo o tamanho da pagina"inline" são características
+do display CSS (inline, block ou inline-block)
+propriedade css vertical-align
+
+pra cada item da Lista usamos a tag <li> 
+
+as  classes no CSS elas servem para marcar intens que são repetidos para evitar redigitação
+
+"head" e "header aonde "head" é a tag padrão do html para passarmos a informação para o navegador 
+"header" é o cabeçalho da pagina dentro do conteúdo
+
+Devemos  criar estilos usando classes e não tags-->
