Teste de conexão

--- a/produtos.html
+++ b/produtos.html
@@ -22,6 +22,33 @@
 				</nav>
 			</div>
 		</header>
+
+		<main>
+			<ul>
+				<li>
+					<h2>cabelo</h2>
+					<img src="cabelo.jpg">
+					<p>Na Tesoura ou máquina, como o cliente preferir</p>
+					<p>R$ 25,00</p>
+
+				</li>
+				<li>
+					<h2>barba</h2>
+					<img src="barba.jpg">
+					<p>Corte e desenho profissional de Barba</p>
+					<p>R$ 18,00</p>
+				</li>
+				<li>
+					<h2>cabelo+barba</h2>
+					<img src="cabelo+barba.jpg">
+					<p>Pacote Completo de Cabelo e Barba</p>
+					<p>R$ 35,00</p>
+				</li>
+			</ul>
+			cabelo
+			barba
+			cabelo+barba
+		</main>
 	</body>
 </html>
 
