--- a/produtos.html
+++ b/produtos.html
@@ -24,30 +24,27 @@
 		</header>
 
 		<main>
-			<ul>
+			<ul class="produtos">
 				<li>
-					<h2>cabelo</h2>
+					<h2>Cabelo</h2>
 					<img src="cabelo.jpg">
-					<p>Na Tesoura ou máquina, como o cliente preferir</p>
-					<p>R$ 25,00</p>
+					<p class="produto-descrição">Na Tesoura ou máquina, como o cliente preferir</p>
+					<p class="produto-preco">R$ 25,00</p>
 
 				</li>
 				<li>
-					<h2>barba</h2>
+					<h2>Barba</h2>
 					<img src="barba.jpg">
-					<p>Corte e desenho profissional de Barba</p>
-					<p>R$ 18,00</p>
+					<p class="produto-descrição">Corte e desenho profissional de Barba</p>
+					<p class="produto-preco">R$ 18,00</p>
 				</li>
 				<li>
-					<h2>cabelo+barba</h2>
+					<h2>Cabelo+Barba</h2>
 					<img src="cabelo+barba.jpg">
-					<p>Pacote Completo de Cabelo e Barba</p>
-					<p>R$ 35,00</p>
+					<p class="produto-descrição">Pacote Completo de Cabelo e Barba</p>
+					<p class="produto-preco">R$ 35,00</p>
 				</li>
 			</ul>
-			cabelo
-			barba
-			cabelo+barba
 		</main>
 	</body>
 </html>
